--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <div id="HUD">
-        <span id="score">Score: 0</span>
+        <span id="score">Score</span>
         <video id="webcam" autoplay playsinline></video>
         <canvas id="webcamCanvas"></canvas>
     </div>
